--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,7 @@
         <img style='width:20rem; display: flex;' src="img.jpg" alt="">
         <div style="display: flex; flex-direction: column;">
             <h1>Moo krob By PooM</h1>
+            <h3>สิริภูมิ หลิมสุนทร</h3>
             <p>
                 📌: 123 ถนนสายหมูกรอบ เขตบางรัก กรุงเทพมหานคร 10150 <br>
                 📞: 081-234-5678 <br>
