--- a/index.html
+++ b/index.html
@@ -44,23 +44,17 @@
    </nav>
 
    <main style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
-    <h1 style="font-size: 5rem;">home page</h1>
-    <div style="display: flex; justify-content: center; align-items: center;">
-        <img style='width:20rem; display: flex;' src="img.jpg" alt="">
-        <div style="display: flex; flex-direction: column;">
-            <h1>Moo krob By PooM</h1>
-            <p>
-                หมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบ<br>
-                หมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบ<br>
-                หมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบ<br>
-                หมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบ<br>
-                หมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบ<br>
-                หมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบ<br>
-                หมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบ<br>
-                หมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบหมูกรอบ<br>
-            </p>
-        </div>
-    </div>
+     <button onclick="loadData()">load data...</button>
+    <h1 id="demo1"></h1>
+    <table id="table_product" border="1">
+        <tr style="background: #008695; width:100%; color: #fff;   text-align:left; font-size:18px;">
+            <th style="padding-left:15px;">ID</th>
+            <th>name product</th>
+            <th>Details</th>
+            <th>price</th>
+            <th>QTY</th>
+        </tr>
+        </table>
    </main>
     
 </body>
