--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         }
 
     </style>
+    <script src="script.js"></script>
 </head>
 <body>
    <nav style="display: flex; align-items: center; justify-content: space-between; background-color: #00ab89;">
